--- a/content.html
+++ b/content.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>File Master</title>
+    <title>Document</title>
   </head>
   <body>
-    <p>Ini file Master</p>
+    <h1 align="center">INI CONTEN</h1>
   </body>
 </html>
